--- a/WebApp.html
+++ b/WebApp.html
@@ -7,41 +7,59 @@
     <title>Intelligent Air Quality Monitoring</title>
     <style type="text/css">
         body {
-            background-color: #f5f5f5;
-            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
         }
         .data-container {
+            margin: 50px auto; /* center */
+            padding: 20px; /* space between container and items */
             display: flex; /* same line */
             justify-content: space-between; /* space between items */
             width: 50%; /* width of container */
-            margin: 50px auto; /* center */
-            padding: 20px; /* space between container and items */
             background-color: #fefefe;
-            box-shadow: 0 2px 20px rgb(0, 0, 0);
+            box-shadow: 0 2px 20px rgb(107, 107, 107);
             border-radius: 10px; /* rounded corners */
         }
         .data-item h2{
+            margin-bottom: 10px;
             text-align: center;
             font-weight: bold;
             font-size: 24px;
-            margin-bottom: 10px;
         }
         .data-item p{
+            text-align: center;
             font-size: 48px;
             font-weight: bold;
-            color: #023417;
+            color: #248924; /* text color */
+        }
+        .data-head {
+            margin: 50px auto;
+            padding: 20px;
+            margin-top: 50px;
+            text-align: center;
+            font-size: 50px;
+            font-weight: bold;
+            color: #e8f4e8;
+            width: 50%; /* width of container */
+            background-color: #115911;
+            box-shadow: 0 2px 20px rgb(107, 107, 107);
+            border-radius: 10px; /* rounded corners */
         }
     </style>
 </head>
 
 <body>
-    <h1 style="font-size: 50px;">Intelligent Air Quality Monitoring</h1>
+    <div class="data-head">
+        Intelligent Air Quality Monitoring
+    </div>
+
+    
     <div class="data-container">
         <div class="data-item">
             <h2>Temperature</h2>
-            <p>22 &#8451;</p>
+            <p class="value">22 &#8451;</p>
         </div>
         <div class="data-item">
             <h2>Humidity</h2>
